--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
 	"name": "codereaper",
-	"displayName": "CodeReaper",
+	"displayName": "Code Reaper",
 	"description": "",
 	"version": "0.0.1",
+	"publisher": "muralivnv",
 	"engines": {
 		"vscode": "^1.61.0"
 	},
@@ -10,7 +11,7 @@
 		"Other"
 	],
 	"activationEvents": [
-		"onCommand:codereaper.toggle"
+		"*"
 	],
 	"main": "./src/extension.js",
 	"contributes": {
@@ -48,5 +49,8 @@
 		"mocha": "^9.1.1",
 		"typescript": "^4.4.3",
 		"@vscode/test-electron": "^1.6.2"
+	},
+	"dependencies": {
+		"fuse.js": "^6.4.6"
 	}
 }
