--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
 	"name": "codereaper",
 	"displayName": "Code Reaper",
 	"description": "",
-	"version": "0.0.1",
-	"publisher": "muralivnv",
+	"version": "1.0.0",
+	"publisher": "Murali VNV",
+	"repository": { 
+		"url": "https://github.com/muralivnv/CodeReaper-vscode-extension" 
+	},
 	"engines": {
 		"vscode": "^1.61.0"
 	},
@@ -11,7 +14,13 @@
 		"Other"
 	],
 	"activationEvents": [
-		"*"
+		"onCommand:codereaper.toggle",
+		"onCommand:codereaper.jumpToTab",
+		"onCommand:codereaper.jumpToFile"
+	],
+	"extensionKind": [
+		"ui",
+		"workspace"
 	],
 	"main": "./src/extension.js",
 	"contributes": {
@@ -19,8 +28,21 @@
 			{
 				"command": "codereaper.toggle",
 				"title": "Code Reaper Toggle"
+			},
+			{
+				"command": "codereaper.clearInput",
+				"title": "Clears selection/multi-cursors in Navigation Mode"
+			},
+			{
+				"command": "codereaper.jumpToTab",
+				"title": "List and fuzzy search most-recently-used tabs and quickly jump to them"
+			},
+			{
+				"command": "codereaper.jumpToFile",
+				"title": "list and fuzzy search workspace files and quick jump to them"
 			}
 		],
+
 		"keybindings": [
 			{
 				"command": "codereaper.toggle",
@@ -32,7 +54,127 @@
 				"key": "escape",
 				"when": "editorTextFocus && codereaper.isInNavigationMode"
 			}
-		]
+		],
+
+		"configuration": {
+			"type": "object",
+			"title": "Code Reaper",
+			"properties": {
+				"codereaper.keymap": {
+					"type": "object",
+					"description": "Map key sequence to vscode commands",
+					"default": {
+						"i": {"command": "cursorUp",                              "args": {}},
+						"I": {"command": "cursorUpSelect",                        "args": {}},
+						"k": {"command": "cursorDown",                            "args": {}},
+						"K": {"command": "cursorDownSelect",                      "args": {}},
+						"u": {"command": "cursorLeft",                            "args": {}},
+						"U": {"command": "cursorLeftSelect",                      "args": {}},
+						"o": {"command": "cursorRight",                           "args": {}},
+						"O": {"command": "cursorRightSelect",                     "args": {}},
+						"j": {"command": "cursorWordLeft",                        "args": {}},
+						"J": {"command": "cursorWordLeftSelect",                  "args": {}},
+						"l": {"command": "cursorWordRight",                       "args": {}},
+						"L": {"command": "cursorWordRightSelect",                 "args": {}},
+						",": {"command": "cursorHome",                            "args": {}},
+						"<": {"command": "cursorHomeSelect",                      "args": {}},
+						".": {"command": "cursorEnd",                             "args": {}},
+						">": {"command": "cursorEndSelect",                       "args": {}},
+						"b": {"command": "editor.action.jumpToBracket",           "args": {}},
+						"B": {"command": "editor.action.selectToBracket",         "args": {}},
+						"[": {"command": "workbench.action.navigateBack",         "args": {}},
+						"]": {"command": "workbench.action.navigateForward",      "args": {}},
+
+						"mi": {"command": "editor.action.moveLinesUpAction",      "args": {}},
+						"mk": {"command": "editor.action.moveLinesDownAction",    "args": {}},
+						"mo": {"command": "editor.action.moveCarretRightAction",  "args": {}},
+						"mu": {"command": "editor.action.moveCarretLeftAction",   "args": {}},
+
+						"dd": {"command": "editor.action.revealDefinition",       "args": {}},
+						"dp": {"command": "editor.action.peekDefinition",         "args": {}},
+						"dr": {"command": "references-view.findReferences",       "args": {}},
+						"-": {"command": "breadcrumbs.toggleToOn",                "args": {}},
+
+						"gt": {"command": "cursorTop",                           "args": {}},
+						"GT": {"command": "cursorTopSelect",                     "args": {}},
+						"gb": {"command": "cursorBottom",                        "args": {}},
+						"GB": {"command": "cursorBottomSelect",                  "args": {}},
+						"gw": {"command": "jumpToHint.jumpByWord",               "args": {}},
+						"gq": {"command": "jumpToHint.jumpBySearch",             "args": {}},
+						"gl": {"command": "jumpToHint.jumpByLine",               "args": {}},
+
+						"s(": {"command": "codereaper.selectParenthesis",         "args": {}},
+						"s)": {"command": "codereaper.selectParenthesisOuter",    "args": {}},
+						"s[": {"command": "codereaper.selectSquareBrackets",      "args": {}},
+						"s]": {"command": "codereaper.selectSquareBracketsOuter", "args": {}},
+						"s{": {"command": "codereaper.selectCurlyBrackets",       "args": {}},
+						"s}": {"command": "codereaper.selectCurlyBracketsOuter",  "args": {}},
+						"s<": {"command": "codereaper.selectAngleBrackets",       "args": {}},
+						"s>": {"command": "codereaper.selectAngleBracketsOuter",  "args": {}},
+						"s\"": {"command": "codereaper.selectDoubleQuote",        "args": {}},
+						"s'": {"command": "codereaper.selectSingleQuote",         "args": {}},
+						"s`": {"command": "codereaper.selectBackTick",            "args": {}},
+						"s.": {"command": "codereaper.selectInTag",               "args": {}},
+						"ss": {"command": "editor.action.smartSelect.expand",     "args": {}},
+						"sS": {"command": "editor.action.smartSelect.shrink",     "args": {}},
+						"sl": {"command": "expandLineSelection",                  "args": {}},
+
+						"ca": {"command": "editor.action.selectHighlights",                 "args": {}},
+						"ci": {"command": "editor.action.insertCursorAbove",                "args": {}},
+						"ck": {"command": "editor.action.insertCursorBelow",                "args": {}},
+						"cc": {"command": "editor.action.addSelectionToNextFindMatch",      "args": {}},
+						"cn": {"command": "editor.action.moveSelectionToNextFindMatch",     "args": {}},
+						"cp": {"command": "editor.action.moveSelectionToPreviousFindMatch", "args": {}},
+						
+						"tt": {"command": "codereaper.jumpToTab",                  "args": {}},
+						"tn": {"command": "workbench.action.nextEditor",           "args": {}},
+						"tp": {"command": "workbench.action.previousEditor",       "args": {}},
+						"tx": {"command": "workbench.action.closeActiveEditor",    "args": {}},
+
+						"?": {"command": "codereaper.jumpToFile",                  "args": {}},
+						"/": {"command": "extension.multiCommand.execute",         "args": {"command": "multiCommand.fuzzySearchContent"}},
+						
+						"\\": {"command": "workbench.action.splitEditor",            "args": {}},
+						"|": {"command": "workbench.action.splitEditorOrthogonal",   "args": {}}
+					}
+				},
+				"codereaper.stickyParentKeys":{
+					"type": "object",
+					"description": "Map key sequence to vscode commands",
+					"default": ["m", "c"]
+				},
+				"codereaper.navigationModeIdentifier":{
+					"type": "string",
+					"description": "Text to display in status bar when in navigation mode",
+					"default": "🐒"
+				},
+				"codereaper.editModeIdentifier": {
+					"type": "string",
+					"description": "Text to display in status bar when in edit mode",
+					"default": "🐑"
+				},
+				"codereaper.maxMRUTabsLen": {
+					"type": "number",
+					"description": "Maximum number of most-recently-used tab names to maintain",
+					"default": 20
+				},
+				"codereaper.tabHintCharList": {
+					"type": "string",
+					"description": "Characters to use to hint when displaying MRU tabs",
+					"default": "fjdkghsla;ruvmeic,tybnwox.qpz"
+				},
+				"codereaper.fileSearchIncludeGlob": {
+					"type": "string",
+					"description": "Glob to use while fuzzy searching for files",
+					"default": "**/*.{c,py,txt,cpp,h,cc,hpp,json,yaml,js,ts,md,csv,xlsx}"
+				},
+				"codereaper.fileSearchExcludeGlob": {
+					"type": "string",
+					"description": "Glob to exclude while fuzzy searching for files",
+					"default": "**/{node_modules,App,GogetaSim}/**"
+				}
+			}
+		}
 	},
 	"scripts": {
 		"lint": "eslint .",
