--- a/package.json
+++ b/package.json
@@ -171,7 +171,7 @@
 				"codereaper.fileSearchExcludeGlob": {
 					"type": "string",
 					"description": "Glob to exclude while fuzzy searching for files",
-					"default": "**/{node_modules,App,GogetaSim}/**"
+					"default": "**/{node_modules}/**"
 				}
 			}
 		}
