fixed stickyParentKeys type to array

--- a/package.json
+++ b/package.json
@@ -142,7 +142,7 @@
 					}
 				},
 				"codereaper.stickyParentKeys":{
-					"type": "object",
+					"type": "array",
 					"description": "Map key sequence to vscode commands",
 					"default": ["m", "c"]
 				},
