--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
 	"name": "codereaper",
 	"displayName": "Code Reaper",
 	"description": "",
-	"version": "1.0.6",
+	"version": "1.0.7",
 	"publisher": "muralivnv",
-	"repository": { 
-		"url": "https://github.com/muralivnv/CodeReaper-vscode-extension" 
+	"repository": {
+		"url": "https://github.com/muralivnv/CodeReaper-vscode-extension"
 	},
 	"engines": {
 		"vscode": "^1.61.0"
@@ -45,7 +45,6 @@
 				"title": "[CodeReaper] Fuzzy search for content and jump to them"
 			}
 		],
-
 		"keybindings": [
 			{
 				"command": "codereaper.toggle",
@@ -58,7 +57,6 @@
 				"when": "editorTextFocus && codereaper.isInNavigationMode"
 			}
 		],
-
 		"configuration": {
 			"type": "object",
 			"title": "Code Reaper",
@@ -67,86 +65,282 @@
 					"type": "object",
 					"description": "Map key sequence to vscode commands",
 					"default": {
-						"i": {"command": "cursorUp",                              "args": {}},
-						"I": {"command": "cursorUpSelect",                        "args": {}},
-						"k": {"command": "cursorDown",                            "args": {}},
-						"K": {"command": "cursorDownSelect",                      "args": {}},
-						"u": {"command": "cursorLeft",                            "args": {}},
-						"U": {"command": "cursorLeftSelect",                      "args": {}},
-						"o": {"command": "cursorRight",                           "args": {}},
-						"O": {"command": "cursorRightSelect",                     "args": {}},
-						"j": {"command": "cursorWordLeft",                        "args": {}},
-						"J": {"command": "cursorWordLeftSelect",                  "args": {}},
-						"l": {"command": "cursorWordRight",                       "args": {}},
-						"L": {"command": "cursorWordRightSelect",                 "args": {}},
-						",": {"command": "cursorHome",                            "args": {}},
-						"<": {"command": "cursorHomeSelect",                      "args": {}},
-						".": {"command": "cursorEnd",                             "args": {}},
-						">": {"command": "cursorEndSelect",                       "args": {}},
-						"b": {"command": "editor.action.jumpToBracket",           "args": {}},
-						"B": {"command": "editor.action.selectToBracket",         "args": {}},
-						"[": {"command": "workbench.action.navigateBack",         "args": {}},
-						"]": {"command": "workbench.action.navigateForward",      "args": {}},
-
-						"mi": {"command": "editor.action.moveLinesUpAction",      "args": {}},
-						"mk": {"command": "editor.action.moveLinesDownAction",    "args": {}},
-						"mo": {"command": "editor.action.moveCarretRightAction",  "args": {}},
-						"mu": {"command": "editor.action.moveCarretLeftAction",   "args": {}},
-
-						"dd": {"command": "editor.action.revealDefinition",       "args": {}},
-						"dp": {"command": "editor.action.peekDefinition",         "args": {}},
-						"dr": {"command": "references-view.findReferences",       "args": {}},
-						"-": {"command": "breadcrumbs.toggleToOn",                "args": {}},
-
-						"gt": {"command": "cursorTop",                           "args": {}},
-						"GT": {"command": "cursorTopSelect",                     "args": {}},
-						"gb": {"command": "cursorBottom",                        "args": {}},
-						"GB": {"command": "cursorBottomSelect",                  "args": {}},
-						"gw": {"command": "jumpToHint.jumpByWord",               "args": {}},
-						"gq": {"command": "jumpToHint.jumpBySearch",             "args": {}},
-						"gl": {"command": "jumpToHint.jumpByLine",               "args": {}},
-
-						"s(": {"command": "codereaper.selectParenthesis",         "args": {}},
-						"s)": {"command": "codereaper.selectParenthesisOuter",    "args": {}},
-						"s[": {"command": "codereaper.selectSquareBrackets",      "args": {}},
-						"s]": {"command": "codereaper.selectSquareBracketsOuter", "args": {}},
-						"s{": {"command": "codereaper.selectCurlyBrackets",       "args": {}},
-						"s}": {"command": "codereaper.selectCurlyBracketsOuter",  "args": {}},
-						"s<": {"command": "codereaper.selectAngleBrackets",       "args": {}},
-						"s>": {"command": "codereaper.selectAngleBracketsOuter",  "args": {}},
-						"s\"": {"command": "codereaper.selectDoubleQuote",        "args": {}},
-						"s'": {"command": "codereaper.selectSingleQuote",         "args": {}},
-						"s`": {"command": "codereaper.selectBackTick",            "args": {}},
-						"s.": {"command": "codereaper.selectInTag",               "args": {}},
-						"ss": {"command": "editor.action.smartSelect.expand",     "args": {}},
-						"sS": {"command": "editor.action.smartSelect.shrink",     "args": {}},
-						"sl": {"command": "expandLineSelection",                  "args": {}},
-
-						"ca": {"command": "editor.action.selectHighlights",                 "args": {}},
-						"ci": {"command": "editor.action.insertCursorAbove",                "args": {}},
-						"ck": {"command": "editor.action.insertCursorBelow",                "args": {}},
-						"cc": {"command": "editor.action.addSelectionToNextFindMatch",      "args": {}},
-						"cn": {"command": "editor.action.moveSelectionToNextFindMatch",     "args": {}},
-						"cp": {"command": "editor.action.moveSelectionToPreviousFindMatch", "args": {}},
-						
-						"tt": {"command": "codereaper.jumpToTab",                  "args": {}},
-						"tn": {"command": "workbench.action.nextEditor",           "args": {}},
-						"tp": {"command": "workbench.action.previousEditor",       "args": {}},
-						"tx": {"command": "workbench.action.closeActiveEditor",    "args": {}},
-
-						"?": {"command": "codereaper.fuzzySearchFiles",            "args": {}},
-						"/": {"command": "codereaper.fuzzySearchFileContents",     "args": {}},
-						
-						"\\": {"command": "workbench.action.splitEditor",            "args": {}},
-						"|": {"command": "workbench.action.splitEditorOrthogonal",   "args": {}}
+						"i": {
+							"command": "cursorUp",
+							"args": {}
+						},
+						"I": {
+							"command": "cursorUpSelect",
+							"args": {}
+						},
+						"k": {
+							"command": "cursorDown",
+							"args": {}
+						},
+						"K": {
+							"command": "cursorDownSelect",
+							"args": {}
+						},
+						"u": {
+							"command": "cursorLeft",
+							"args": {}
+						},
+						"U": {
+							"command": "cursorLeftSelect",
+							"args": {}
+						},
+						"o": {
+							"command": "cursorRight",
+							"args": {}
+						},
+						"O": {
+							"command": "cursorRightSelect",
+							"args": {}
+						},
+						"j": {
+							"command": "cursorWordLeft",
+							"args": {}
+						},
+						"J": {
+							"command": "cursorWordLeftSelect",
+							"args": {}
+						},
+						"l": {
+							"command": "cursorWordRight",
+							"args": {}
+						},
+						"L": {
+							"command": "cursorWordRightSelect",
+							"args": {}
+						},
+						",": {
+							"command": "cursorHome",
+							"args": {}
+						},
+						"<": {
+							"command": "cursorHomeSelect",
+							"args": {}
+						},
+						".": {
+							"command": "cursorEnd",
+							"args": {}
+						},
+						">": {
+							"command": "cursorEndSelect",
+							"args": {}
+						},
+						"b": {
+							"command": "editor.action.jumpToBracket",
+							"args": {}
+						},
+						"B": {
+							"command": "editor.action.selectToBracket",
+							"args": {}
+						},
+						"[": {
+							"command": "workbench.action.navigateBack",
+							"args": {}
+						},
+						"]": {
+							"command": "workbench.action.navigateForward",
+							"args": {}
+						},
+						"mi": {
+							"command": "editor.action.moveLinesUpAction",
+							"args": {}
+						},
+						"mk": {
+							"command": "editor.action.moveLinesDownAction",
+							"args": {}
+						},
+						"mo": {
+							"command": "editor.action.moveCarretRightAction",
+							"args": {}
+						},
+						"mu": {
+							"command": "editor.action.moveCarretLeftAction",
+							"args": {}
+						},
+						"dd": {
+							"command": "editor.action.revealDefinition",
+							"args": {}
+						},
+						"dp": {
+							"command": "editor.action.peekDefinition",
+							"args": {}
+						},
+						"dr": {
+							"command": "references-view.findReferences",
+							"args": {}
+						},
+						"-": {
+							"command": "breadcrumbs.toggleToOn",
+							"args": {}
+						},
+						"gt": {
+							"command": "cursorTop",
+							"args": {}
+						},
+						"GT": {
+							"command": "cursorTopSelect",
+							"args": {}
+						},
+						"gb": {
+							"command": "cursorBottom",
+							"args": {}
+						},
+						"GB": {
+							"command": "cursorBottomSelect",
+							"args": {}
+						},
+						"w": {
+							"command": "jumpToHint.jumpByWord",
+							"args": {}
+						},
+						"q": {
+							"command": "jumpToHint.jumpBySearch",
+							"args": {}
+						},
+						"a": {
+							"command": "jumpToHint.jumpByLine",
+							"args": {}
+						},
+						"s(": {
+							"command": "codereaper.selectParenthesis",
+							"args": {}
+						},
+						"s)": {
+							"command": "codereaper.selectParenthesisOuter",
+							"args": {}
+						},
+						"s[": {
+							"command": "codereaper.selectSquareBrackets",
+							"args": {}
+						},
+						"s]": {
+							"command": "codereaper.selectSquareBracketsOuter",
+							"args": {}
+						},
+						"s{": {
+							"command": "codereaper.selectCurlyBrackets",
+							"args": {}
+						},
+						"s}": {
+							"command": "codereaper.selectCurlyBracketsOuter",
+							"args": {}
+						},
+						"s<": {
+							"command": "codereaper.selectAngleBrackets",
+							"args": {}
+						},
+						"s>": {
+							"command": "codereaper.selectAngleBracketsOuter",
+							"args": {}
+						},
+						"s\"": {
+							"command": "codereaper.selectDoubleQuote",
+							"args": {}
+						},
+						"s'": {
+							"command": "codereaper.selectSingleQuote",
+							"args": {}
+						},
+						"s`": {
+							"command": "codereaper.selectBackTick",
+							"args": {}
+						},
+						"s.": {
+							"command": "codereaper.selectInTag",
+							"args": {}
+						},
+						"ss": {
+							"command": "editor.action.smartSelect.expand",
+							"args": {}
+						},
+						"sS": {
+							"command": "editor.action.smartSelect.shrink",
+							"args": {}
+						},
+						"sl": {
+							"command": "expandLineSelection",
+							"args": {}
+						},
+						"st": {
+							"command": "codereaper.jumpToTab",
+							"args": {}
+						},
+						"ca": {
+							"command": "editor.action.selectHighlights",
+							"args": {}
+						},
+						"ci": {
+							"command": "editor.action.insertCursorAbove",
+							"args": {}
+						},
+						"ck": {
+							"command": "editor.action.insertCursorBelow",
+							"args": {}
+						},
+						"cc": {
+							"command": "editor.action.addSelectionToNextFindMatch",
+							"args": {}
+						},
+						"cn": {
+							"command": "editor.action.moveSelectionToNextFindMatch",
+							"args": {}
+						},
+						"cp": {
+							"command": "editor.action.moveSelectionToPreviousFindMatch",
+							"args": {}
+						},
+						"t": {
+							"command": "codereaper.quickJumpToTab",
+							"args": {}
+						},
+						"T": {
+							"command": "workbench.action.openPreviousRecentlyUsedEditor",
+							"args": {}
+						},
+						"el": {
+							"command": "workbench.action.nextEditor",
+							"args": {}
+						},
+						"ej": {
+							"command": "workbench.action.previousEditor",
+							"args": {}
+						},
+						"ex": {
+							"command": "workbench.action.closeActiveEditor",
+							"args": {}
+						},
+						"?": {
+							"command": "codereaper.fuzzySearchFiles",
+							"args": {}
+						},
+						"/": {
+							"command": "codereaper.fuzzySearchFileContents",
+							"args": {}
+						},
+						"\\": {
+							"command": "workbench.action.splitEditor",
+							"args": {}
+						},
+						"|": {
+							"command": "workbench.action.splitEditorOrthogonal",
+							"args": {}
+						}
 					}
 				},
-				"codereaper.stickyParentKeys":{
+				"codereaper.stickyParentKeys": {
 					"type": "array",
 					"description": "Map key sequence to vscode commands",
-					"default": ["m", "c"]
+					"default": [
+						"m",
+						"c",
+						"e"
+					]
 				},
-				"codereaper.navigationModeIdentifier":{
+				"codereaper.navigationModeIdentifier": {
 					"type": "string",
 					"description": "Text to display in status bar when in navigation mode",
 					"default": "🐒"
@@ -164,9 +358,9 @@
 				"codereaper.tabHintCharList": {
 					"type": "string",
 					"description": "Characters to use to hint when displaying MRU tabs",
-					"default": "werdfcv"
+					"default": "asdjklyweio"
 				},
-				"codereaper.ripgrepPath":{
+				"codereaper.ripgrepPath": {
 					"type": "string",
 					"description": "Path to Ripgrep",
 					"default": "rg"
@@ -216,6 +410,6 @@
 		"@vscode/test-electron": "^1.6.2"
 	},
 	"dependencies": {
-		"fuse.js": "^6.4.6"
+		"fuzzysort": "^1.2.1"
 	}
 }
