--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "codereaper",
 	"displayName": "Code Reaper",
 	"description": "",
-	"version": "1.0.7",
+	"version": "1.0.8",
 	"publisher": "muralivnv",
 	"repository": {
 		"url": "https://github.com/muralivnv/CodeReaper-vscode-extension"
@@ -21,7 +21,7 @@
 		"workspace"
 	],
 	"icon": "resources/icon.png",
-	"main": "./src/extension.js",
+	"main": "./dist/extension.js",
 	"contributes": {
 		"commands": [
 			{
@@ -257,11 +257,11 @@
 							"command": "codereaper.selectInTag",
 							"args": {}
 						},
-						"ss": {
+						"S": {
 							"command": "editor.action.smartSelect.expand",
 							"args": {}
 						},
-						"sS": {
+						"ss": {
 							"command": "editor.action.smartSelect.shrink",
 							"args": {}
 						},
@@ -409,20 +409,24 @@
 	"scripts": {
 		"lint": "eslint .",
 		"pretest": "npm run lint",
-		"test": "node ./test/runTest.js"
+		"test": "node ./test/runTest.js",
+		"vscode:prepublish": "npm run package",
+		"webpack": "webpack --mode development",
+		"webpack-dev": "webpack --mode development --watch",
+		"package": "webpack --mode production --devtool hidden-source-map"
 	},
 	"devDependencies": {
-		"@types/vscode": "^1.61.0",
 		"@types/glob": "^7.1.4",
 		"@types/mocha": "^9.0.0",
 		"@types/node": "14.x",
+		"@types/vscode": "^1.61.0",
+		"@vscode/test-electron": "^1.6.2",
 		"eslint": "^7.32.0",
 		"glob": "^7.1.7",
 		"mocha": "^9.1.1",
 		"typescript": "^4.4.3",
-		"@vscode/test-electron": "^1.6.2"
+		"webpack": "^5.70.0",
+		"webpack-cli": "^4.9.2"
 	},
-	"dependencies": {
-		"fuzzysort": "^1.2.1"
-	}
+	"dependencies": {}
 }
